Fix setup metadata. Modify sparql query example. Add README.

--- a/example.ipynb
+++ b/example.ipynb
@@ -12,13 +12,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -31,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -40,11 +33,12 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>country                                            </th><th>capital          </th><th style=\"text-align: right;\">    lat</th><th style=\"text-align: right;\">    long</th></tr>\n",
-       "<tr><td>http://dbpedia.org/resource/Allied-occupied_Germany</td><td>Frankfurt am Main</td><td style=\"text-align: right;\">50.1167</td><td style=\"text-align: right;\"> 8.68333</td></tr>\n",
-       "<tr><td>http://dbpedia.org/resource/Allied-occupied_Germany</td><td>Bad Oeynhausen   </td><td style=\"text-align: right;\">52.2   </td><td style=\"text-align: right;\"> 8.8    </td></tr>\n",
-       "<tr><td>http://dbpedia.org/resource/Germany                </td><td>Berlin           </td><td style=\"text-align: right;\">52.5167</td><td style=\"text-align: right;\">13.3833 </td></tr>\n",
-       "<tr><td>http://dbpedia.org/resource/Allied-occupied_Germany</td><td>Berlin           </td><td style=\"text-align: right;\">52.5167</td><td style=\"text-align: right;\">13.3833 </td></tr>\n",
+       "<tr><th>capital                                     </th><th style=\"text-align: right;\">  populationTotal</th></tr>\n",
+       "<tr><td>http://dbpedia.org/resource/Belgrade        </td><td style=\"text-align: right;\">          1166763</td></tr>\n",
+       "<tr><td>http://dbpedia.org/resource/Amsterdam       </td><td style=\"text-align: right;\">           826659</td></tr>\n",
+       "<tr><td>http://dbpedia.org/resource/Andorra_la_Vella</td><td style=\"text-align: right;\">            22256</td></tr>\n",
+       "<tr><td>http://dbpedia.org/resource/Ankara          </td><td style=\"text-align: right;\">          4587558</td></tr>\n",
+       "<tr><td>http://dbpedia.org/resource/Baku            </td><td style=\"text-align: right;\">          2122300</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
@@ -57,13 +51,15 @@
    ],
    "source": [
     "%%sparql\n",
-    "PREFIX o: <http://dbpedia.org/ontology/>\n",
-    "PREFIX p: <http://dbpedia.org/property/>\n",
-    "PREFIX geo: <http://www.w3.org/2003/01/geo/wgs84_pos#>\n",
-    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
-    "SELECT ?country ?capital ?lat ?long WHERE {\n",
-    "    ?country a o:Country ; foaf:name \"Germany\"@en; o:capital [ geo:lat ?lat ; geo:long ?long ; p:name ?capital ]\n",
-    "}"
+    "PREFIX dct: <http://purl.org/dc/terms/>\n",
+    "PREFIX dcb: <http://dbpedia.org/resource/Category:>\n",
+    "PREFIX dbp: <http://dbpedia.org/property/>\n",
+    "\n",
+    "SELECT ?capital ?populationTotal WHERE {\n",
+    "  ?capital dct:subject dcb:Capitals_in_Europe ; \n",
+    "           dbp:populationTotal ?populationTotal . \n",
+    "}\n",
+    "LIMIT 5"
    ]
   },
   {
